fix: remove horizontal spacing on mobile. Resolves #12

--- a/media/css/_article.css
+++ b/media/css/_article.css
@@ -4,7 +4,7 @@
 
 .article {
     padding-block: 1rem;
-    padding-inline: 1rem;
+    padding-inline: 0.5rem;
 }
 
 .article__header {
