--- a/media/css/_cinetixx.css
+++ b/media/css/_cinetixx.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    padding: 1rem;
+    padding: 1rem 0.5rem;
 }
 
 .cinetixx__section-title {
@@ -33,7 +33,7 @@
     gap: 1rem;
     border: 1px solid #f2940080;
     border-radius: 0.25rem;
-    padding: 1rem;
+    padding: 1rem 0.5rem;
 }
 
 .cinetixx-card__poster {
@@ -102,6 +102,7 @@
             "details details"
             "showbox showbox";
         gap: 1rem 1.5rem;
+        padding: 1rem;
     }
 
     .cinetixx-card__poster-img {
